Upgrade Java to 21